refactor: revamp protocol
