# server/doc/swagger.yaml
@@ -153,14 +153,14 @@ components:
           type: string
         id:
           type: integer
-        last_read_users:
-          items:
-            type: integer
-          type: array
-          uniqueItems: false
         reactions:
           items:
             $ref: '#/components/schemas/dto.ReactionResponse'
+          type: array
+          uniqueItems: false
+        read_by:
+          items:
+            type: integer
           type: array
           uniqueItems: false
         sender_id:
@@ -170,8 +170,8 @@ components:
       - content
       - created_at
       - id
-      - last_read_users
       - reactions
+      - read_by
       - sender_id
       type: object
     dto.ModifyParticipantRequest:
